--- a/ffDashboard.css
+++ b/ffDashboard.css
@@ -14,7 +14,7 @@ label[for="check"]{
     z-index: 101;
     left: 20px;
     top: 20px;
-    font-size: 30px;
+    font-size: 30px;  
     color: #2d3436;
     transition: all 0.3s ease;
 }
@@ -41,7 +41,7 @@ label #cancel {
     font-size: 36px;
     font-weight: 700;
     color: black;
-    font-family: 'Inter', sans-serif;
+    font-family: "Poppins", sans-serif ;
 }
 
 .sidebar {
@@ -83,6 +83,7 @@ label #cancel {
     transition: all 0.3s ease;
     font-size: 14px;
     font-weight: 600;
+    font-family: "Poppins", sans-serif ;
 }
 
 
@@ -119,6 +120,7 @@ label #cancel {
 .location-label {
     font-size: 16px;
     font-weight: 600;
+    font-family: "Poppins", sans-serif ;
     color: #2d3436;
     margin-bottom: 12px;
     display: block;
@@ -138,6 +140,7 @@ label #cancel {
     padding: 12px 40px, 12px, 16px;
     border: 2px solid #e9ecef;
     border-radius: 8px;
+    font-family: "Poppins", sans-serif ;
     font-size: 14px;
     transition: all 0.3s ease;
     background: #f8f9fa;
@@ -160,6 +163,7 @@ label #cancel {
 
 .section-title {
     font-weight: 700;
+    font-family: "Poppins", sans-serif ;
     margin: 24px 0 16px 0;
     color: #2d3436;
     font-size: 16px;
@@ -181,6 +185,7 @@ label #cancel {
     cursor: pointer;
     font-size: 14px;
     font-weight: 600;
+    font-family: "Poppins", sans-serif ;
     transition: all 0.3s ease;
     display: flex;
     align-items: cneter;
@@ -212,6 +217,7 @@ label #cancel {
     transition: all 0.3s ease;
 }
 
+
 .checkbox-wrapper:hover {
     background: rgba (116, 185, 255.0.05);
     border-color: lightblue;
@@ -226,6 +232,7 @@ label #cancel {
 
 .checkbox-wrapper label {
     font-weight: 600;
+    font-family: "Poppins", sans-serif ;
     color: black;
     cursor: pointer;
     flex: 1;
@@ -243,6 +250,7 @@ label #cancel {
     cursor: pointer;
     transition: all 0.3s ease;
     letter-spacing: 1px;
+    font-family: "Poppins", sans-serif ;
     font-weight: 700;
 }
 
