--- a/ffDashboard.css
+++ b/ffDashboard.css
@@ -29,11 +29,11 @@ label[for="check"]{
     top: 20px;
     font-size: 30px;  
     color: #2d3436;
-    transition: all 1.5s ease;
+    transition: all 0.3s ease;
 }
 
 label #btn, label #cancel {
-    transition: all 1.5s ease;
+    transition: all 0.3s ease;
 }
 
 label #btn {
@@ -42,9 +42,9 @@ label #btn {
 
 label #cancel {
     display: none;
-    padding-left: 230px;
+    transform: translateX(230px);  
     padding-top: 10px;
-    transition: all 2s ease;
+    transition: all 0.3s ease;
 }
 
 #check:checked ~ label #btn {
@@ -57,14 +57,20 @@ label #cancel {
 
 /*sidebar title*/
 .app-title{
-    padding-top: 10px;
-    padding-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
     font-size: 36px;
     font-weight: 700;
     color: black;
+    text-decoration: none;
     font-family: "Poppins", sans-serif ;
+    display: inline-block;
 }
 
+.app-title:hover {
+    color: midnightblue;
+    cursor: pointer;
+}
 .sidebar {
     position: fixed;
     top: 0;
